--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,6 +7,7 @@ body {
 
 #content {
   display: grid;
+  max-height: auto;
 }
 
 .content {
@@ -113,10 +114,19 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  grid-template-rows: 1fr 1fr;
+}
+
+#portrait-img-mobile {
+  border-radius: 100%;
 }
 
 #portrait-img {
-  border-radius: 100%;
+  display: none;
+}
+
+#about-text {
+  align-self: start;
 }
 
 #about-text h4 {
